add some rustc slang

--- a/rustdev/vscode-settings.json
+++ b/rustdev/vscode-settings.json
@@ -38,21 +38,31 @@
         "RA_LOG": "warn,rust_analyzer::reload=debug",
     },
     "cSpell.words": [
+        "Expn",
+        "Rptr",
+        "Substs",
+        "TMPDIR",
+        "Zmiri",
+        "coinductive",
         "ctxt",
+        "fdiv",
         "intravisit",
+        "libcore",
         "mois",
         "monomorphization",
         "mplace",
         "qpath",
         "reinit",
         "reinits",
-        "Rptr",
         "selcx",
         "sess",
         "substs",
+        "subtyping",
         "sugg",
+        "supertraits",
         "thir",
+        "uncategorized",
         "upvars",
         "worklist"
-    ],
+    ]
 }
